--- a/app/src/main/res/layout/product_list.xml
+++ b/app/src/main/res/layout/product_list.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/menu_logo_bottom_padding">
+
+        <ImageView
+            android:layout_width="@dimen/navigation_button"
+            android:layout_height="@dimen/navigation_button"
+            android:src="@drawable/back_button"
+            android:layout_weight="1"
+            android:id="@+id/back"/>
+        <ImageView
+            android:layout_width="@dimen/navigation_button"
+            android:layout_height="@dimen/navigation_button"
+            android:layout_weight="1"
+            android:src="@drawable/forward_button"
+            android:id="@+id/forward"/>
+
+    </LinearLayout>
+    </LinearLayout>
