--- a/app/src/main/res/layout/product_list.xml
+++ b/app/src/main/res/layout/product_list.xml
@@ -1,28 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/product_list"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="@dimen/menu_logo_bottom_padding">
-
-        <ImageView
-            android:layout_width="@dimen/navigation_button"
-            android:layout_height="@dimen/navigation_button"
-            android:src="@drawable/back_button"
-            android:layout_weight="1"
-            android:id="@+id/back"/>
-        <ImageView
-            android:layout_width="@dimen/navigation_button"
-            android:layout_height="@dimen/navigation_button"
-            android:layout_weight="1"
-            android:src="@drawable/forward_button"
-            android:id="@+id/forward"/>
-
-    </LinearLayout>
-    </LinearLayout>
+    android:layout_height="match_parent"
+    android:drawSelectorOnTop="true">
+</ListView>
