--- a/app/src/main/res/layout/clock_out.xml
+++ b/app/src/main/res/layout/clock_out.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ClockIn"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -62,34 +59,22 @@
             android:textAlignment="center"/>
 
 
-        <Button android:id="@+id/clock_in_button"
+        <Button android:id="@+id/clock_out_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/clock_in"
+            android:text="@string/clock_out_button"
             android:layout_gravity="center"
             android:background="@color/black"
             android:layout_margin="@dimen/text_field_margin" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-    <ImageView
-        android:layout_width="@dimen/navigation_button"
-        android:layout_height="@dimen/navigation_button"
-        android:src="@drawable/back_button"
-        android:layout_weight="1"
-        android:id="@+id/back_to_menu"
-        android:layout_gravity="center"/>
-    <ImageView
-        android:layout_width="@dimen/navigation_button"
-        android:layout_height="@dimen/navigation_button"
-        android:layout_weight="1"
-        android:src="@drawable/forward_button"
-        android:id="@+id/forward_to_employee_details"/>
-    </LinearLayout>
+        <ImageView
+            android:layout_width="@dimen/navigation_button"
+            android:layout_height="@dimen/navigation_button"
+            android:src="@drawable/back_button"
+            android:layout_weight="1"
+            android:id="@+id/back_to_menu"
+            android:layout_gravity="center"/>
 
 </LinearLayout>
