--- a/app/src/main/res/layout/employee_details.xml
+++ b/app/src/main/res/layout/employee_details.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ClockIn"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".EmployeeDetails"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:gravity="center">
 
-        <Button android:id="@+id/scan_button"
+        <Button android:id="@+id/scan_employee_details_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/scan"
@@ -23,11 +22,11 @@
             android:layout_margin="@dimen/text_field_margin"/>
 
         <TextView
-            android:id="@+id/employee_name_text_view"
+            android:id="@+id/employee_details_name_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textIsSelectable="true"
-            android:hint="@string/employee_name_text_view"
+            android:hint="@string/employee_name"
             android:layout_gravity="center"
             android:background="@color/scan_items_fields"
             android:textColorHint="@color/text_color"
@@ -36,11 +35,11 @@
             android:textAlignment="center"/>
 
         <TextView
-            android:id="@+id/employee_role_text_view"
+            android:id="@+id/employee_details_role_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textIsSelectable="true"
-            android:hint="@string/employee_role_text_view"
+            android:hint="@string/employee_role"
             android:textColorHint="@color/text_color"
             android:layout_gravity="center"
             android:background="@color/scan_items_fields"
@@ -49,11 +48,11 @@
             android:textAlignment="center"/>
 
         <TextView
-            android:id="@+id/employee_code_text_view"
+            android:id="@+id/employee_details_code_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textIsSelectable="true"
-            android:hint="@string/employee_code_text_view"
+            android:hint="@string/employee_code"
             android:textColorHint="@color/text_color"
             android:layout_gravity="center"
             android:background="@color/scan_items_fields"
@@ -61,35 +60,20 @@
             android:textColor="@color/text_color"
             android:textAlignment="center"/>
 
-
-        <Button android:id="@+id/clock_in_button"
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/clock_in"
-            android:layout_gravity="center"
-            android:background="@color/black"
-            android:layout_margin="@dimen/text_field_margin" />
-
+            android:id="@+id/product_image"
+            />
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
     <ImageView
         android:layout_width="@dimen/navigation_button"
-        android:layout_height="@dimen/navigation_button"
+        android:layout_height="0dp"
         android:src="@drawable/back_button"
         android:layout_weight="1"
-        android:id="@+id/back_to_menu"
-        android:layout_gravity="center"/>
-    <ImageView
-        android:layout_width="@dimen/navigation_button"
-        android:layout_height="@dimen/navigation_button"
-        android:layout_weight="1"
-        android:src="@drawable/forward_button"
-        android:id="@+id/forward_to_employee_details"/>
-    </LinearLayout>
+        android:id="@+id/back"
+        android:layout_gravity="center"
+        />
 
 </LinearLayout>
