--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,24 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/list_item">
+    android:id="@+id/list_item"
+    android:gravity="center">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/name_text_view"
+        android:gravity="center"
+        android:textSize="@dimen/text_size"
     />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/barcode_text_view"
-    />
+        android:gravity="center"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/quantity_text_view"
-        />
+        android:gravity="center"/>
 
 </LinearLayout>
