--- a/app/src/main/res/layout/stock_transfer.xml
+++ b/app/src/main/res/layout/stock_transfer.xml
@@ -3,16 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorAccent">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/boxes"
-        android:contentDescription="@string/logo"
-        android:paddingBottom="@dimen/menu_logo_bottom_padding"
-        />
+    android:orientation="vertical">
 
     <Button android:id="@+id/scan_button"
         android:layout_width="match_parent"
@@ -35,7 +26,7 @@
         android:textColor="@color/text_color"
         android:textAlignment="center"/>
 
-    <EditText
+    <TextView
         android:id="@+id/product_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,7 +38,7 @@
         android:layout_margin="@dimen/text_field_margin"
         android:textColor="@color/text_color"
         android:textAlignment="center"/>
-    <EditText
+    <TextView
         android:id="@+id/product_quantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,36 +51,46 @@
         android:textColor="@color/text_color"
         android:textAlignment="center"/>
 
-    <Button android:id="@+id/register_button"
+    <EditText
+        android:id="@+id/product_quantity_for_transfer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/register_button"
+        android:textIsSelectable="true"
+        android:hint="@string/product_quantity_for_transfer"
+        android:textColorHint="@color/text_color"
+        android:layout_gravity="center"
+        android:background="@color/scan_items_fields"
+        android:layout_margin="@dimen/text_field_margin"
+        android:textColor="@color/text_color"
+        android:textAlignment="center"/>
+
+    <EditText
+        android:id="@+id/to_store_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textIsSelectable="true"
+        android:hint="@string/to_store"
+        android:textColorHint="@color/text_color"
+        android:layout_gravity="center"
+        android:background="@color/scan_items_fields"
+        android:layout_margin="@dimen/text_field_margin"
+        android:textColor="@color/text_color"
+        android:textAlignment="center"/>
+
+    <Button android:id="@+id/stock_transfer_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/transfer_button"
         android:layout_gravity="center"
         android:layout_margin="@dimen/text_field_margin"
         android:background="@color/black"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="@dimen/menu_logo_bottom_padding">
-
-        <ImageView
-            android:layout_width="@dimen/navigation_button"
-            android:layout_height="@dimen/navigation_button"
-            android:src="@drawable/back_button"
-            android:layout_weight="1"
-            android:id="@+id/back"/>
-        <ImageView
-            android:layout_width="@dimen/navigation_button"
-            android:layout_height="@dimen/navigation_button"
-            android:layout_weight="1"
-            android:src="@drawable/forward_button"
-            android:id="@+id/forward"/>
-
-    </LinearLayout>
-
-
-
+    <ImageView
+        android:layout_width="@dimen/navigation_button"
+        android:layout_height="@dimen/navigation_button"
+        android:src="@drawable/back_button"
+        android:layout_weight="1"
+        android:id="@+id/back_to_menu"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
