--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -9,4 +9,6 @@
     <dimen name="text_field_margin">12dp</dimen>
     <dimen name="navigation_button">84dp</dimen>
 
+    <dimen name ="text_size">24sp</dimen>
+
 </resources>
