--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -4,6 +4,6 @@
     android:id="@+id/list"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="wrap_content"
     android:layout_weight="1">
 </ListView>
