--- a/app/src/main/res/layout/product_list_view.xml
+++ b/app/src/main/res/layout/product_list_view.xml
@@ -4,6 +4,6 @@
     android:id="@+id/product_list_view"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="match_parent"
     android:layout_weight="1">
 </ListView>
